# ossu-computer-science-course

./: .breakpoints  .gitignore  3. extract_nums.py  README.me  ReadMe.md  codes.py  email.sqlite  extract_nums.py  file_handle.py  file_reader.py  lecture-1-test.rkt  lecture-1.rkt  lecture-1b.rkt  pyproject.toml  reseach-data.py  roster.sqlite
1-py4e/: ReadMe.md  emaildb.py  link_follower.py  socket1.py  xml_extract.py
1-py4e/roster_16/: answer.txt  roster.sqlite  roster2.py  roster_data.json
1-py4e/tracks_16/: trackdb.sqlite
18.01 MIT/: readme.md
1PY4E/: email.sqlite  emaildb.py  geojson.py  html_sum.py  socket1_header.txt  trackdb.sqlite  tracks.py
1PY4E/roster_16/: roster.sqlite  roster2.py
1PY4E/tracks_16/: tracks.py
2MIT/: forLoops.py  ps1c.py  ps2.py
2MIT/ps3/: ps3.py  test_ps3.py
2MIT/ps3.py/: ps3.py
2MIT/ps4/: forLoops.py  practice.py  practice2.py  primrose.py  ps4a.py  ps4a_copy.py  ps4b.py  ps4c.py
2MIT/ps5/: feedparser.py  practice.py  ps5.py  triggers.txt
2MIT/sorting/: sort.py  sort_test.py
3HTCSP/: install.rkt  test.rkt
3MIT/: ReadMe.md
3MIT/ps1/: graph.py  prac.py  prac2.py  ps1a.py  ps1b.py  trees.py
3MIT/ps2/: graph.py  (+2 more)
4MIT/: prac.java  readME.md
6.0001-mit/: ReadMe.md
9EXERCISM/: dicts.py
9exercism/: locomotive_engineer.py
MIT/: ps1.py  ps1b.py  ps1c.py
PY4E/: geojson.py  json_extract.py
algorithms-and-data-structures/: automatic_tester.sh  clang-formatter.sh  max_input_timer.sh  stress_tester.sh
htc-complex-data/: README.md
oop-in-java-specialization-ucsd/: Point.java  hello.java
pl-part-a/: h0test.sml
(+586 files in other folders)
